# OJT-Flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PORT.md  README.md  RELEASE_CANDIDATE.md  TEST_AUDIT_REPORT.md  UPLOAD_IMAGE_FAILURE_PROOF.md  constraints.txt  docker-compose.yml  mcp_test.bat  proposal.md  pyproject.toml  statement.md
.claude/: settings.json
.github/workflows/: ci.yml  deploy-gce.yml  deploy.yml  retrieval-evaluation.yml
.qa/: 001-semantic_rag_production_tests_prompt.md  002-queue_workers_smoke_request.md  003-knowledge_page_qa.md  004-ocr_lab_table_parser_regression.md  006-assistant-fhir-profile-non-json.md  007-minio_artifact_storage_and_files_page.md  run.sh
.qa/smoke-artifacts/: diabetes_followup_ground_truth.json
docs/: abuse_cost_controls_v0.md  admin_policy_page_v0.md  ai_risk_register_v0.md  analytics_external_month7_v0.md  api_contract_v0.md  assistant_answer_templates_v0.md  assistant_evaluation_v0.md  assistant_mcp_agent.md  assistant_safety_cases_v0.md  assistant_tool_permissions_v0.md  audit_event_export_v0.md  audit_hash_chain_v0.md  auth_architecture.md  clinical_package_v0.md  corpus_ingestion_framework_v0.md  corpus_knowledge_graph_v0.md  demo_backend_flow.md  disclaimer_policy_v0.md  document_intake_v0.md  document_parsing_uploads.md  external_provider_policy_v0.md  feature_roadmap_8_months.md  frontend_architecture.md  generated_output_validation_v0.md  governance_workspace_v0.md  healthcare_medical_format_strategy.md  interoperability_month7_v0.md  knowledge_page_plan.md  mcp_resources_prompts_v0.md  no_raw_phi_logging_v0.md  ocr_evidence_ui_v0.md  owasp_llm_threat_model_v0.md  ownership_authorization_v0.md  pgvector_index_management.md  phi_classification_v0.md  phi_redaction_policy_v0.md  production_semantic_rag.md  rate_limiting_v0.md  rbac_roles_v0.md  release_performance_readiness_v0.md  (+12 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: auth.spec.ts  layout.spec.ts  oauth.spec.ts  smoke.spec.ts  workflow.spec.ts
frontend/scripts/: assert-runtime-assets-current.mjs  cleanup-e2e-artifacts.mjs  cleanup-e2e-local-artifacts.mjs
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/keycloak/: configure-google-idp.sh  ojtflow-realm.json
infra/loki/: loki-config.yml
infra/prometheus/: prometheus.yml
infra/promtail/: promtail-config.yml
latex/: main.tex
plan/: 00_master_plan.md  01_scaffolding_backbone.md  02_core_workflow_detailed_plan.md  03_agents_mcp_detailed_plan.md  04_rag_graphner_detailed_plan.md  05_medical_multimodal_detailed_plan.md  06_security_governance_detailed_plan.md  07_platform_mlops_detailed_plan.md  08_evaluation_roadmap_detailed_plan.md  09_backend_v0_implementation_status.md  README.md
scripts/: check-migrations.py  deployment-smoke.py  evaluate-graph-ner.py  evaluate-retrieval.py  migrate-local-artifacts-to-minio  performance-smoke.py  release-check.sh  run-api-local  run-real-smoke-tests  scan-no-raw-phi.py  verify_no_fake_ai_in_production
slide/: OJTFlow_EN.tex  OJTFlow_JP.tex  OJTFlow_Presentation_EN.html  OJTFlow_Presentation_JP.html  run.sh
submit/: OJTFlow_short_proposal.tex
tests/: QUARANTINED_AI_TESTS.md  test_abuse_cost_policy.py  test_ai_risk_register.py  test_analytics_external.py  test_api.py  test_assistant_evaluations.py  test_assistant_examples.py  test_assistant_safety.py  test_assistant_service.py  test_audit_records.py  test_auth_service.py  test_background_job_service.py  test_config.py  test_contracts.py  test_data_tools.py  test_disclaimers.py  test_docker_runtime_config.py  test_document_analysis.py  test_document_intake.py  test_document_parsing.py  test_external_provider_policy.py  test_frontend_architecture.py  test_governance.py  test_graph_med_service.py  test_graph_ner_evaluation.py  test_graph_persistence.py  test_interoperability.py  test_keycloak_workspaces_invitations.py  test_knowledge_graph_memory.py  test_logging_guard.py  test_mcp_remote_policy.py  test_medsiglip_integration.py  test_operations_readiness.py  test_owasp_llm_threat_model.py  test_phi_classification.py  test_postgres_migrations.py  test_postgres_storage_optional.py  test_queue_backed_ocr_workers.py  test_rate_limit.py  test_real_gpu_api_smoke.py  (+10 more)
(+1117 files in other folders)
