[project]
name = "ojtflow"
version = "0.1.0"
description = "Governed healthcare data workflow scaffold for OJTFlow"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "google-auth[requests]>=2.29,<3",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.9",
  "pyyaml>=6,<7",
  "redis>=5,<6",
  "uvicorn[standard]>=0.29,<1"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]
parsing = [
  "markitdown[pdf,docx,xlsx,xls,pptx]>=0.1.0",
]
parsing-full = [
  "markitdown[pdf,docx,xlsx,xls,pptx]>=0.1.0",
  "magic-pdf[full]>=0.11.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
