[project]
name = "ojtflow"
version = "0.1.0"
description = "Governed healthcare data workflow scaffold for OJTFlow"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111,<1",
  "google-auth[requests]>=2.29,<3",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "python-multipart>=0.0.9",
  "pyyaml>=6,<7",
  "redis>=5,<6",
  "uvicorn[standard]>=0.29,<1"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio"
]
parsing = [
  "markitdown[pdf,docx,xlsx,xls,pptx]>=0.1.0",
  "markitdown-ocr>=0.1.0,<0.2",
  "openpyxl>=3.1,<4",
  "openai>=1.0,<3",
  "pypdf>=4,<6",
]
parsing-full = [
  "markitdown[pdf,docx,xlsx,xls,pptx]>=0.1.0",
  "markitdown-ocr>=0.1.0,<0.2",
  "magic-pdf[full]>=0.11.0",
  "openpyxl>=3.1,<4",
  "openai>=1.0,<3",
  "pypdf>=4,<6",
]
ocr-local = [
  "pillow>=10,<12",
  "pytesseract>=0.3,<0.4",
]
embeddings-local = [
  "sentence-transformers>=3.0,<4",
]
rag-framework = [
  "llama-index-core>=0.14,<0.15",
  "llama-index-retrievers-bm25>=0.7,<0.8",
]
mcp = [
  "mcp[cli]>=1.13,<2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
